# anti-family-sharing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  anti-family-sharing.cpp  anti-family-sharing.h  build-guide.md  main.cpp
garrysmod/lua/autorun/server/: sv_anti-family-sharing.lua
